actualizo pom